--- a/src/openforms/js/lang/formio/en.json
+++ b/src/openforms/js/lang/formio/en.json
@@ -41,5 +41,6 @@
   "invalid_time": "Only times between {{ minTime }} and {{ maxTime }} are allowed.",
   "You must select at least {{minCount}} items.": "Ensure this field has at least {{minCount}} checked options.",
   "Empty fields": "Fields without a value",
+  "Invalid Postcode": "The submitted value does not match the postcode pattern: 1234 AB",
   "": ""
 }
