--- a/src/openforms/js/lang/formio/nl.json
+++ b/src/openforms/js/lang/formio/nl.json
@@ -408,5 +408,6 @@
   "You must verify this email address to continue.": "Om door te gaan moet je dit e-mailadres bevestigen.",
   "You must select at least {{minCount}} items.": "Zorg dat dit veld {{minCount}} of meer opties aangevinkt heeft.",
   "Soft required errors": "Foutmeldingen aangeraden velden",
+  "Empty fields": "Velden zonder antwoord",
   "": ""
 }
