--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -2021,6 +2021,11 @@
     "description": "Legacy objects API registration options: 'productaanvraagType' helpText",
     "originalDefault": "Name of the product request type. It is available in the JSON template as the 'productaanvraag_type' variable."
   },
+  "eF9O7c": {
+    "defaultMessage": "Attachments",
+    "description": "Email registration: attachments fieldset title",
+    "originalDefault": "Attachments"
+  },
   "eJEu3L": {
     "defaultMessage": "Weet u zeker dat u deze regel wil verwijderen?",
     "description": "Price rule deletion confirm message",
@@ -2552,11 +2557,6 @@
     "description": "Variable table form definition title",
     "originalDefault": "Form definition"
   },
-  "ppZHsm": {
-    "defaultMessage": "Configure options",
-    "description": "Link label to open StUF-ZDS options modal",
-    "originalDefault": "Configure options"
-  },
   "pqCru3": {
     "defaultMessage": "Servicebevraging:",
     "description": "Currently selected service fetch configuration label",
@@ -2606,6 +2606,11 @@
     "defaultMessage": "Beheer complexe procesvariabelen",
     "description": "Camunda complex process vars modal title",
     "originalDefault": "Manage complex process variables"
+  },
+  "r64cfz": {
+    "defaultMessage": "Payment updates",
+    "description": "Email registration: payment configuration fieldset title",
+    "originalDefault": "Payment updates"
   },
   "r9MTrz": {
     "defaultMessage": "Request-headers",
@@ -2927,11 +2932,6 @@
     "defaultMessage": "Zds zaaktype omschrijving",
     "description": "StUF-ZDS registration options 'zdsZaaktypeOmschrijving' label",
     "originalDefault": "Zds zaaktype omschrijving"
-  },
-  "zGMQ75": {
-    "defaultMessage": "Gebruikersvariabelen",
-    "description": "User defined variables tab title",
-    "originalDefault": "User defined"
   },
   "zLTTBw": {
     "defaultMessage": "Veld waar beschikbare datums voor een afspraak komen te staan",
