--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -634,11 +634,6 @@
     "description": "Delete icon title",
     "originalDefault": "Delete"
   },
-  "CNJ2TT": {
-    "defaultMessage": "This mapping is used to map the variable keys to keys used in the XML that is sent to StUF-ZDS. Those keys and the values belonging to them in the submission data are included in extraElementen.",
-    "description": "StUF-ZDS registration paymentStatusUpdateMapping message",
-    "originalDefault": "This mapping is used to map the variable keys to keys used in the XML that is sent to StUF-ZDS. Those keys and the values belonging to them in the submission data are included in extraElementen."
-  },
   "CXKQZZ": {
     "defaultMessage": "Bevestiging",
     "description": "Form confirmation options tab title",
@@ -781,6 +776,11 @@
     "description": "\"array\" operand type",
     "originalDefault": "the array"
   },
+  "F2GYwp": {
+    "defaultMessage": "Base",
+    "description": "StUF-ZDS registration backend options, 'base' tab label",
+    "originalDefault": "Base"
+  },
   "F9ew4C": {
     "defaultMessage": "Versie",
     "description": "Objects API registration options 'objecttypeVersion' label",
@@ -905,6 +905,11 @@
     "defaultMessage": "Onderhoudsmodus",
     "description": "Form maintenance mode field label",
     "originalDefault": "Maintenance mode"
+  },
+  "H7z8+8": {
+    "defaultMessage": "Extra elements",
+    "description": "StUF-ZDS registration backend options, 'extra elements' tab label",
+    "originalDefault": "Extra elements"
   },
   "HCfL9x": {
     "defaultMessage": "Indien ingeschakeld, moet de gebruiker akkoord gaan met het privacybeleid voordat die een formulier indient.",
@@ -1400,6 +1405,11 @@
     "defaultMessage": "Nee (met overzichtspagina)",
     "description": "option \"no_with_overview\" of \"submission_allowed\"",
     "originalDefault": "No (with overview page)"
+  },
+  "Qb1GWo": {
+    "defaultMessage": "StUF-ZDS name",
+    "description": "StUF-ZDS extraElement name label",
+    "originalDefault": "StUF-ZDS name"
   },
   "QljfI7": {
     "defaultMessage": "Email subject",
@@ -2071,15 +2081,15 @@
     "description": "Dynamic pricing fieldset title",
     "originalDefault": "Pricing logic"
   },
+  "fTmdl/": {
+    "defaultMessage": "Payment status update variable mapping",
+    "description": "StUF-ZDS registration paymentStatusUpdateMapping label",
+    "originalDefault": "Payment status update variable mapping"
+  },
   "fWcg7I": {
     "defaultMessage": "Sleutel-waarde paar (object)",
     "description": "data type object",
     "originalDefault": "Object"
-  },
-  "ffvbQm": {
-    "defaultMessage": "payment status update variable mapping",
-    "description": "StUF-ZDS registration paymentStatusUpdateMapping label",
-    "originalDefault": "payment status update variable mapping"
   },
   "fpX4ei": {
     "defaultMessage": "Soort mappingexpressie",
@@ -2516,6 +2526,11 @@
     "defaultMessage": "Complexe procesvariabelen",
     "description": "Open manage complex camunda process vars modal button",
     "originalDefault": "Complex process variables"
+  },
+  "p3t0c/": {
+    "defaultMessage": "This mapping is used to map the variable keys to keys used in the XML that is sent to StUF-ZDS. Those keys and the values belonging to them in the submission data are included in <code>extraElementen</code>.",
+    "description": "StUF-ZDS registration paymentStatusUpdateMapping message",
+    "originalDefault": "This mapping is used to map the variable keys to keys used in the XML that is sent to StUF-ZDS. Those keys and the values belonging to them in the submission data are included in <code>extraElementen</code>."
   },
   "p5Iv+R": {
     "defaultMessage": "Documenttype-API-resource-URL in de Catalogi-API.",
