:art: [#4686] Fix react uncontrolled -> controlled component warning and correct wrong texts

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -214,11 +214,6 @@
     "description": "Form askStatementOfTruth field label",
     "originalDefault": "Ask statement of truth"
   },
-  "3baawY": {
-    "defaultMessage": "StUF-ZDS name",
-    "description": "StUF-ZDS registration options 'paymentStatusUpdateMapping stufName' label",
-    "originalDefault": "StUF-ZDS name"
-  },
   "3z1hhJ": {
     "defaultMessage": "Toggle JSON Schema",
     "description": "Objects API variable configuration editor JSON Schema visibility toggle",
@@ -398,11 +393,6 @@
     "defaultMessage": "Is reusable?",
     "description": "Form step is reusable label",
     "originalDefault": "Is reusable?"
-  },
-  "8IItwi": {
-    "defaultMessage": "The name in StUF-ZDS to which the form variable should be mapped",
-    "description": "StUF-ZDS registration options 'paymentStatusUpdateMapping stufName' helpText",
-    "originalDefault": "The name in StUF-ZDS to which the form variable should be mapped"
   },
   "8LLxRg": {
     "defaultMessage": "The text that will be displayed in the form step to save the current information. Leave blank to get value from global configuration.",
@@ -984,11 +974,6 @@
     "description": "Decision definition ID label",
     "originalDefault": "Decision definition ID"
   },
-  "Ihbi6N": {
-    "defaultMessage": "Zaaktype status omschrijving for newly created zaken in StUF-ZDS",
-    "description": "StUF-ZDS registration options 'zdsZaakdocVertrouwelijkheid' helpText",
-    "originalDefault": "Zaaktype status omschrijving for newly created zaken in StUF-ZDS"
-  },
   "Ika4IH": {
     "defaultMessage": "Submissions will be deleted",
     "description": "delete_permanently removal method option label",
@@ -1444,11 +1429,6 @@
     "description": "Readable label for the language",
     "originalDefault": "Language"
   },
-  "RjWycp": {
-    "defaultMessage": "Form variable",
-    "description": "StUF-ZDS registration options 'paymentStatusUpdateMapping formVariable' label",
-    "originalDefault": "Form variable"
-  },
   "Rk13i+": {
     "defaultMessage": "Initial value",
     "description": "Variable table initial value title",
@@ -1624,11 +1604,6 @@
     "description": "Variable table sensitive data title",
     "originalDefault": "Sensitive data"
   },
-  "Vu09Ne": {
-    "defaultMessage": "Zds zaaktype status omschrijving",
-    "description": "StUF-ZDS registration options 'zdsZaakdocVertrouwelijkheid' label",
-    "originalDefault": "Zds zaaktype status omschrijving"
-  },
   "WHqkYA": {
     "defaultMessage": "Date/time",
     "description": "Date/time column header",
@@ -1749,6 +1724,11 @@
     "description": "form.introductionPageContent label",
     "originalDefault": "Introduction page"
   },
+  "Z8f4hI": {
+    "defaultMessage": "Document confidentiality level",
+    "description": "StUF-ZDS registration options 'zdsZaakdocVertrouwelijkheid' label",
+    "originalDefault": "Document confidentiality level"
+  },
   "ZB6mnn": {
     "defaultMessage": "The variable key must be unique within a form",
     "description": "Unique key error message",
@@ -1808,11 +1788,6 @@
     "defaultMessage": "Mapped to the {geometryPath} attribute",
     "description": "'Mapped to geometry' registration summary message",
     "originalDefault": "Mapped to the {geometryPath} attribute"
-  },
-  "aDFrqO": {
-    "defaultMessage": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }",
-    "description": "Objects API registration validation errors icon next to button",
-    "originalDefault": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }"
   },
   "aUChz/": {
     "defaultMessage": "Products Component",
@@ -2134,11 +2109,6 @@
     "description": "App version column header",
     "originalDefault": "App version"
   },
-  "gtjPWc": {
-    "defaultMessage": "The name of the form variable to be mapped",
-    "description": "StUF-ZDS registration options 'paymentStatusUpdateMapping formVariable' helpText",
-    "originalDefault": "The name of the form variable to be mapped"
-  },
   "gz32s2": {
     "defaultMessage": "If desired, you can specify a different process variable name.",
     "description": "Manage process vars alias help text",
@@ -2318,6 +2288,11 @@
     "defaultMessage": "Session will expire",
     "description": "Model title session expiry warning",
     "originalDefault": "Session will expire"
+  },
+  "jy1jTd": {
+    "defaultMessage": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }",
+    "description": "Registration validation errors icon next to button to configure options",
+    "originalDefault": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }"
   },
   "k34Vke": {
     "defaultMessage": "Then",
@@ -2829,6 +2804,11 @@
     "description": "Products Component field help text",
     "originalDefault": "Component where products for an appointment will be shown"
   },
+  "wqCiwc": {
+    "defaultMessage": "Indication of the level to which extend the dossier of the ZAAK is meant to be public. This is set on the documents created for the ZAAK.",
+    "description": "StUF-ZDS registration options 'zdsZaakdocVertrouwelijkheid' helpText",
+    "originalDefault": "Indication of the level to which extend the dossier of the ZAAK is meant to be public. This is set on the documents created for the ZAAK."
+  },
   "wrdDVu": {
     "defaultMessage": "Legacy configuration",
     "description": "ZGw APIs registration: legacy configuration options fieldset title",
@@ -2888,11 +2868,6 @@
     "defaultMessage": "Authorizee",
     "description": "Identifier role (for mandate context) label for authorizee",
     "originalDefault": "Authorizee"
-  },
-  "yJiaOl": {
-    "defaultMessage": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }",
-    "description": "StUF-ZDS registration validation errors icon next to button",
-    "originalDefault": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }"
   },
   "yLt2lv": {
     "defaultMessage": "JSON template for the body of the request sent to the Objects API.",
