:globe_with_meridians: Extract payment provider config form translations

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -544,6 +544,11 @@
     "description": "Form definition select confirm button",
     "originalDefault": "Confirm"
   },
+  "B/A1Bk": {
+    "defaultMessage": "Which merchant should be used for payments related to this form.",
+    "description": "Ogone legacy payment options 'merchantId' help text",
+    "originalDefault": "Which merchant should be used for payments related to this form."
+  },
   "B5RSyi": {
     "defaultMessage": "Email payment subject",
     "description": "Email registration options 'emailPaymentSubject' label",
@@ -768,6 +773,11 @@
     "defaultMessage": "Base",
     "description": "StUF-ZDS registration backend options, 'base' tab label",
     "originalDefault": "Base"
+  },
+  "F2VuCs": {
+    "defaultMessage": "Merchant ID",
+    "description": "Ogone legacy payment options 'merchantId' label",
+    "originalDefault": "Merchant ID"
   },
   "F9ew4C": {
     "defaultMessage": "Version",
@@ -1889,6 +1899,11 @@
     "description": "Incomplete Submissions Removal Limit field label",
     "originalDefault": "Incomplete Submissions Removal Limit"
   },
+  "cEALcN": {
+    "defaultMessage": "Configure options",
+    "description": "Link label to open payment provider options modal",
+    "originalDefault": "Configure options"
+  },
   "cID9dz": {
     "defaultMessage": "(complex value)",
     "description": "JSON editor: complex value representation",
@@ -2669,6 +2684,11 @@
     "description": "Email registration options 'attachFilesToEmail' helpText",
     "originalDefault": "Enable to attach file uploads to the registration email. If set, this overrides the global default. Form designers should take special care to ensure that the total file upload sizes do not exceed the email size limit."
   },
+  "sQpH2P": {
+    "defaultMessage": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }",
+    "description": "Payment provider validation errors icon next to button to configure options",
+    "originalDefault": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }"
+  },
   "sptpzv": {
     "defaultMessage": "Switching to the new registration options will remove the existing JSON templates. You will also not be able to save the form until the variables are correctly mapped. Are you sure you want to continue?",
     "description": "Objects API registration backend: v2 switch warning message",
@@ -2963,6 +2983,11 @@
     "defaultMessage": "Object",
     "description": "JSON variable type \"object\" representation",
     "originalDefault": "Object"
+  },
+  "zYu3XI": {
+    "defaultMessage": "Plugin configuration: Ogone legacy",
+    "description": "Ogone legacy options modal title",
+    "originalDefault": "Plugin configuration: Ogone legacy"
   },
   "zeXZzX": {
     "defaultMessage": "Use logic rules to determine the price",
