:speech_balloon: [open-formulieren/open-forms#4320] ondertekener -> ondertekenaar

--- a/src/openforms/js/lang/formio/nl.json
+++ b/src/openforms/js/lang/formio/nl.json
@@ -253,8 +253,8 @@
   "Co-sign": "Mede-ondertekenen",
   "Password": "Wachtwoord",
   "Authentication method": "Authenticatiemethode",
-  "Which authentication method the co-signer must use. Note that this must be an authentication method available on the form.": "Welke authenticatiemethode de mede-ondertekener moet gebruiken. Let op: Dit moet dezelfde authenticatiemethode zijn als is gebruikt op het formulier.",
-  "Co-signer email address": "E-mailadres mede-ondertekener",
+  "Which authentication method the co-signer must use. Note that this must be an authentication method available on the form.": "Welke authenticatiemethode de mede-ondertekenaar moet gebruiken. Let op: Dit moet dezelfde authenticatiemethode zijn als is gebruikt op het formulier.",
+  "Co-signer email address": "E-mailadres mede-ondertekenaar",
   "Decimal Places": "Decimalen",
   "Allow negative values": "Laat negatieve waarden toe",
   "Allow negative values.": "Laat negatieve waarden toe.",
